# ai-iconflow

./: .gitignore  AGENTS.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
brand/: README.md  iconflow.toml  master-review.json  review.html  tokens.css
casebook/: 2026-06-19-tgs-planning-site.md  2026-07-03-mobile-tether-hub.md  2026-07-03-streamscribe.md  2026-07-06-creator-favicon-confident.md  2026-07-06-creator-favicon.md  2026-07-07-codex-handbook.md  2026-07-07-hitohira-hana-favicon.md  2026-07-08-creator-favicon-family.md  2026-07-09-pc-vitals.md  2026-07-11-snowy-twitch-bot.md  2026-07-12-ctrl-rescue.md  2026-07-13-iconflow-brand.md  2026-07-13-media-hub.md  2026-07-14-creator-favicon-face.md  2026-07-14-creator-study-favicon.md  2026-07-14-creator-window-favicon-family.md  2026-07-16-bargain-hunter.md  2026-07-16-career-cat.md  2026-07-16-fado-website.md  2026-07-16-snowy-repo-quest.md  2026-07-18-snowy-twitch-bot-fox-badge.md  2026-07-20-btrw-browser-proxy.md  2026-07-20-xrl-screening-favicon.md  README.md
docs/: BRAND_SYSTEM.md  CONCEPTING.md  DESIGN_PLAYBOOK.md  EVOLUTION.md  LEARNINGS.md  OUTPUT_TARGETS.md  REVIEW_CHECKLIST.md  SVG_TECHNIQUES.md  WORKFLOW.md
examples/: README.md
iconflow/: __init__.py  assemble.py  build.py  casebook.py  cli.py  config.py  htmlhead.py  qa.py  rasterize.py  review.py  shortcut.py
iconflow/resources/: __init__.py
scripts/: setup.ps1
skills/iconflow/: README.md  SKILL.md
tests/: test_assemble.py  test_build.py  test_casebook.py  test_cli.py  test_config.py  test_htmlhead.py  test_qa.py  test_review.py
