[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-iconflow"
version = "0.4.0"
description = "Turn an app brief and one semantic SVG master into a reviewed, platform-ready icon family"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["icon", "favicon", "svg", "pwa", "electron", "tray", "design-system"]
authors = [{ name = "snowyukitty" }]
# License intentionally unset for now (all rights reserved); choose one before
# wider distribution.
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Build Tools",
  "Operating System :: OS Independent",
]
dependencies = [
  "playwright>=1.40",
  "Pillow>=10.0",
  "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
iconflow = "iconflow.cli:main"

[project.urls]
Homepage = "https://github.com/snowyukitty/ai-iconflow"
Repository = "https://github.com/snowyukitty/ai-iconflow"
Issues = "https://github.com/snowyukitty/ai-iconflow/issues"

[tool.setuptools]
packages = [
  "iconflow",
  "iconflow.resources",
  "iconflow.resources.templates",
  "iconflow.resources.presets",
  "iconflow.resources.docs",
]
include-package-data = false

# Keep authoring assets in their readable top-level directories while mapping
# immutable wheel resources under the IconFlow package.  The CLI accesses them
# exclusively through importlib.resources, so `iconflow new` also works from an
# isolated wheel install with no source checkout nearby.
[tool.setuptools.package-dir]
"iconflow.resources.templates" = "templates"
"iconflow.resources.presets" = "templates/presets"
"iconflow.resources.docs" = "docs"

[tool.setuptools.package-data]
"iconflow.resources.templates" = ["*.svg"]
"iconflow.resources.presets" = ["*.svg"]
"iconflow.resources.docs" = ["*.md", "assets/*"]
